styles.css
:root {
	--white: #fff;
	--black: #222;
	--pink: #f60091;
	--grey: #444;
	--grey2: #959595;
	--grey-alt: #d1e2e9;
	--yellow: #ffd800;
	--green: #59b210;
}

*,
*::before,
*::after {
	margin: 0;
	padding: 0;
	box-sizing: inherit;
}

html {
	scroll-behavior: smooth;
	box-sizing: border-box;
	font-size: 62.5%;
}

body {
	font-family: "Cormorant Garamond", sans-serif;
	font-size: 1.6rem;
	font-weight: 400;
	background-color: rgba(247, 247, 247, 0.63);
	color: #243a6f;
	position: relative;
	z-index: 1;
}

h1,
h2,
h3,
h4 {
	font-weight: 500;
}

a {
	color: inherit;
	text-decoration: none;
}

img {
	max-width: 100%;
}

li {
	list-style: none;
}

.header-info {
	display: flex;
	justify-content: space-between;
	padding: 5px 200px;
}
.names {
	display: grid;
	justify-content: center;
	font-size: 70px;
	font-family: "Great Vibes";
}

.header {
	position: relative;
	width: 100%;
	/* min-height: 90vh; */
	overflow: hidden;
}

/* nav bar */
.navbar {
	font-size: 18px;
	background-color: #e0bfb8;
	border: 1px solid rgba(0, 0, 0, 0.2);
	padding-bottom: 5px;
}

.main-nav {
	list-style-type: none;
	display: none;
}

.main-nav2 {
	list-style-type: none;
	display: none;
}

.nav-links,
.logo {
	text-decoration: none;
	color: #fff;
	cursor: pointer;
}

.nav-list-item {
	text-align: center;
	margin: 5px auto;
	padding-right: 20px;
}

.nav-links a {
	color: white;
}

.logo {
	display: none;
	margin-left: 20px;
	color: #fff;
}

.logo2 {
	padding-top: 4px;
	display: inline-block;
	margin-left: 20px;
	color: #fff;
}

.navbar-toggle {
	position: absolute;
	right: 20px;
	cursor: pointer;
	color: rgba(255, 255, 255, 0.8);
	font-size: 24px;
}

.active {
	display: block;
}

@media screen and (min-width: 1360px) {
	.navbar {
		display: flex;
		justify-content: center;
		padding-bottom: 0;
		align-items: center;
		padding: 5px 20px;
	}

	.main-nav {
		display: flex;
		margin-right: 30px;
		flex-direction: row;
		justify-content: flex-end;
	}

	.main-nav2 {
		display: flex;
		margin-right: 30px;
		flex-direction: row;
		justify-content: flex-end;
	}

	.main-nav li {
		margin: 0;
	}

	.nav-links {
		margin-left: 40px;
		cursor: pointer;
	}

	.logo {
		margin-top: 0;
		padding-left: unset !important;
		font-size: 25px;
		font-weight: 500;
		margin: 0 100px;
		color: #fff;
		display: block;
	}

	.logo2 {
		margin-top: 0;
		padding-left: unset !important;
		font-size: 25px;
		font-weight: 500;
		margin: 0 100px;
		color: #fff;
		display: none;
	}

	.navbar-toggle {
		display: none;
	}

	.logo:hover,
	.nav-links:hover {
		color: rgba(255, 255, 255, 1);
	}
}

/* End of nav bar */

.bannerContainer {
	justify-content: center;
	text-align: center;
	align-items: center;
	background-image: url(/imgs/banner2.JPEG);
	background-size: cover;
	background-position: 65%;
	height: 650px;
}

.bannerInfo {
	position: relative;
	top: 45%;
}

.bannerTitle {
	font-size: 70px;
	font-weight: bold;
	letter-spacing: 2px;
	color: white;
	text-shadow: 0px 0px 10px black;
}

.engaged {
	padding-left: 20px;
}

.bannerText {
	font-size: 20px;
	color: white;
	text-shadow: 0px 0px 10px black;
}

@media (max-width: 890px) {
	.bannerTitle {
		font-size: 40px;
	}
}

/* our story section */
.story-container {
	display: grid;
	grid-template-columns: minmax(450px, 1fr) minmax(450px, 1fr);
	align-items: center;
	justify-content: space-between;
}

.couple-photo {
	height: auto;
	margin: auto;
}

.icon {
	font-size: 25px;
	display: grid;
	margin: auto 0;
}

.story-text {
	max-height: 300px;
}
.story-title {
	display: flex;
	gap: 10px;
	justify-content: center;
	font-size: 35px;
	color: #e0bfb8;
	border-bottom: 2px solid #e0bfb8;
	width: 40%;
	margin: auto;
	padding-top: 30px;
}

.story-para {
	padding: 60px 40px;
	color: #222;
	font-size: 20px;
	text-align: center;
}

@media screen and (max-width: 1580px) {
	.story-container {
		display: block;
	}
	.story-text {
		max-height: unset;
	}

	.story-title {
		width: 30%;
	}
}

@media screen and (max-width: 860px) {
	.story-title {
		width: 60%;
	}
}


/* RSVP */

.rsvp-container{
	background-color:#e0bfb8;
	padding: 50px 0;
}

.rsvp-container-title{
	text-align: center;
	font-size: 40px;
	color: #fff;
	border-bottom: 2px solid white;
	width: 25%;
	margin: 0 auto;
}

.rsvp{
	width: 30%;
	text-align: center;
	margin: 30px auto;
	padding: 30px 0;
	background-color:rgba(247, 247, 247, 0.918);
	border-radius: 5px;
}

.rsvp-title{
	font-size: 35px;
}

.checkbox-list{
	display: flex;
	justify-content: center;
	padding: 10px 0;
	gap: 20px;
}

.checkbox-item{
	display: flex;
	gap: 5px;
}

.checkbox-element{
	margin-top: 3px;
	cursor: pointer;
}



.checkbox-element[type=checkbox]:checked{
	background: #222;
	color: #222;
}

.test{
	background-color: #222;
}

.amount-of-guests{
	display: flex;
	gap: 10px;
	justify-content: center;
}

.guest-input{
	background: transparent;
	border: none;
	border-bottom: 1px solid black;
	text-align: center;
	width: 10%;
	font-family: "Cormorant Garamond", sans-serif;
	font-size: 18px;
	margin-top: -5px;
	border-radius: 0px;
}

.guest-input[type=text]:focus{
	outline: none;
}

.name-section{
	display: flex;
	gap: 10px;
	justify-content: center;
	padding-top: 10px;
}

.name-input{
	background: transparent;
	border: none;
	border-bottom: 1px solid black;
	text-align: center;
	width: 25%;
	font-family: "Cormorant Garamond", sans-serif;
	font-size: 18px;
	margin-top: -5px;
	border-radius: 0px;
}

.name-input[type=text]:focus{
	outline: none;
}


@media (max-width: 850px) {
	.rsvp-container-title{
		width: 50%;
		font-size: 35px;
	}
	.rsvp{
		width: 50%;
	}
}

@media (max-width: 650px) {
	.rsvp-container-title{
		width: 60%;
		font-size: 30px;
	}
	.rsvp{
		width: 70%;
	}
	.name-input{
		width: 55%;
	}
}



/* contact section */
.contact-container {
	display: grid;
	grid-template-columns: minmax(450px, 1fr) minmax(450px, 1fr);
	color: #222;
}

.company {
	display: grid;
	justify-content: center;
	align-items: center;
	background-image: url("https://images.pexels.com/photos/2879823/pexels-photo-2879823.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
	background-size: cover;
}

.contact-info {
	background-color: #fcfcfc;
	padding: 40px 30px;
	border-radius: 15px;
	margin: 0 25px;
}

.contact-title {
	color: #e0bfb8;
	font-size: 30px;
	padding-bottom: 20px;
}

.address {
	padding-bottom: 20px;
	width: 60%;
}

.map {
	position: relative;
	padding-top: 100%;
}

.google {
	width: 100%;
	height: 600px;
}

@media (max-width: 750px) {
	.contact-container {
		display: block;
	}
	.company {
		padding: 100px 0;
	}
}

/* countdown timer */
.timer-container {
	margin-top: -10px;
	padding: 15px 0;
	color: #fff;
	background-color: #e0bfb8;
	display: grid;
	justify-content: center;
}

.timer-title {
	font-size: 30px;
}

.timer-list {
	display: flex;
	gap: 20px;
	font-size: 20px;
	padding-left: 15px;
}

@media (max-width: 890px) {
	.timer-container {
		text-align: center;
	}
	.timer-title {
		font-size: 25px;
	}
}

/* photo gallary */

.gallary-container {
	background-color: #e0bfb8;
	color: #fcfcfc;
	padding: 10px 0;
	margin-top: -6px;
	position: relative;
	z-index: 2;
}

.gallary-title {
	font-size: 40px;
	width: 20%;
	margin: 10px auto;
	text-align: center;
	display: grid;
	border-bottom: 3px solid #fcfcfc;
}

.cs-text {
	display: grid;
	font-family: "Great vibes";
	justify-content: center;
	align-items: center;
	text-align: center;
	font-size: 75px;
}

@media (max-width: 890px) {
	.gallary-title {
		font-size: 30px;
		width: 60%;
	}
	.cs-text {
		font-size: 40px;
	}
}

/* contact form */
.contact {
	margin: 50px 0;
}

.form-title {
	text-align: center;
	width: 20%;
	margin: 40px auto;
	font-size: 40px;
	color: #e0bfb8;
	border-bottom: 3px solid #e0bfb8;
}

.contact-form {
	display: grid;
	max-width: 600px;
	height: 100%;
	margin: auto;
	background-color: #e0bfb8;
	padding: 40px 30px;
	border-radius: 10px;
}

label {
	color: white;
}

.form-input {
	margin-bottom: 10px;
	padding: 10px 0;
	padding-left: 10px;
	border-radius: 10px;
	border: 1px solid #fcfcfc;
}

.form-input-textarea {
	height: 100px;
	margin: 10px 0;
	padding: 10px 0;
	padding-left: 10px;
	border-radius: 10px;
	border: 1px solid #fcfcfc;
}

.submit-btn {
	font-weight: 600;
	font-size: 14px;
	color: rgb(97, 96, 96);
	padding: 10px 0;
	width: 40%;
	margin: 10px auto;
	background-color: #fcfcfc;
	border: 1px solid #fcfcfc;
	border-radius: 10px;
	cursor: pointer;
}

@media (max-width: 1290px) {
	.form-title {
		font-size: 30px;
		width: 30%;
	}
}

@media (max-width: 790px) {
	.form-title {
		text-align: center;
		margin-top: 25px;
		width: 50%;
		font-size: 25px;
	}
	.contact-form {
		margin: 30px 10%;
	}
	.input-div {
		display: block;
		width: 100%;
	}
}

/* footer */
.footer-info {
	display: grid;
	justify-content: center;
	text-align: center;
	padding: 20px 0;
	margin-top: 80px;
	background-color: #e0bfb8;
	color: #fcfcfc;
}

